@@ -23,7 +23,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  
  #include <linux/uaccess.h>
  
-@@ -93,6 +94,13 @@ bool cgroup_memory_noswap __read_mostly;
+@@ -93,6 +94,13 @@
  static DECLARE_WAIT_QUEUE_HEAD(memcg_cgwb_frn_waitq);
  #endif
  
@@ -37,7 +37,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  /* Whether legacy memory+swap accounting is active */
  static bool do_memsw_account(void)
  {
-@@ -5733,12 +5741,12 @@ static int mem_cgroup_move_account(struc
+@@ -5727,12 +5735,12 @@
  
  	ret = 0;
  
@@ -52,7 +52,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  out_unlock:
  	unlock_page(page);
  out:
-@@ -6808,10 +6816,10 @@ int mem_cgroup_charge(struct page *page,
+@@ -6802,10 +6810,10 @@
  	css_get(&memcg->css);
  	commit_charge(page, memcg);
  
@@ -63,9 +63,9 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
 -	local_irq_enable();
 +	local_unlock_irq(&event_lock.l);
  
- 	if (PageSwapCache(page)) {
- 		swp_entry_t entry = { .val = page_private(page) };
-@@ -6855,11 +6863,11 @@ static void uncharge_batch(const struct
+ 	/*
+ 	 * Cgroup1's unified memory+swap counter has been charged with the
+@@ -6861,11 +6869,11 @@
  		memcg_oom_recover(ug->memcg);
  	}
  
@@ -79,7 +79,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  
  	/* drop reference from uncharge_page */
  	css_put(&ug->memcg->css);
-@@ -7013,10 +7021,10 @@ void mem_cgroup_migrate(struct page *old
+@@ -7019,10 +7027,10 @@
  	css_get(&memcg->css);
  	commit_charge(newpage, memcg);
  
@@ -92,7 +92,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  }
  
  DEFINE_STATIC_KEY_FALSE(memcg_sockets_enabled_key);
-@@ -7191,6 +7199,7 @@ void mem_cgroup_swapout(struct page *pag
+@@ -7197,6 +7205,7 @@
  	struct mem_cgroup *memcg, *swap_memcg;
  	unsigned int nr_entries;
  	unsigned short oldid;
@@ -100,7 +100,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  
  	VM_BUG_ON_PAGE(PageLRU(page), page);
  	VM_BUG_ON_PAGE(page_count(page), page);
-@@ -7236,9 +7245,13 @@ void mem_cgroup_swapout(struct page *pag
+@@ -7242,9 +7251,13 @@
  	 * important here to have the interrupts disabled because it is the
  	 * only synchronisation we have for updating the per-CPU variables.
  	 */
