@@ -545,6 +545,7 @@ linux (5.10.21-1) UNRELEASED; urgency=medium
   * [rt] Refresh "printk: remove logbuf_lock"
   * [rt] Refresh "printk: remove safe buffers"
   * [rt] Refresh "printk: remove deferred printing"
+  * [rt] Refresh "mm/memcontrol: Replace local_irq_disable with local locks"
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 05 Mar 2021 17:46:35 +0100
 
